# tractor_extrinsic_calibration

./: .gitattributes  CMakeLists.txt  README.md  package.xml
camera_extrinsic_calibration/: __init__.py  calibration_solver.py  charuco_detector.py  image_collector.py  utils.py
config/: cameras.yaml  charuco_board.yaml
launch/: calibrate.launch.py  collect_images.launch.py
scripts/: collect_calibration_images.py  compute_extrinsics.py  generate_charuco_board.py  test_detection.py  visualize_calibration.py
test/: test_calibration.py
